--- a/RockWeb/Themes/Rock/Styles/group-scheduler.less
+++ b/RockWeb/Themes/Rock/Styles/group-scheduler.less
@@ -6,11 +6,12 @@
 @import "../../../Styles/_rock-variables.less";
 
 .dropzone {
-  &:empty {
+  &:empty{
     position: relative;
     padding: 30px;
     outline: 2px dashed rgba(0,0,0,.3);
     outline-offset: -2px;
+
     &::after {
       position: absolute;
       top: 50%;
@@ -51,11 +52,9 @@
   display: block;
   overflow: auto;
   cursor: pointer;
-
   outline: 2px dashed rgba(0,0,0,0);
   outline-offset: -2px;
   transition: .2s outline linear;
-
   padding: 4px;
   margin-right: 8px;
   margin-bottom: 12px;
@@ -88,6 +87,47 @@
 .resource[data-state="unassigned"] {
 }
 
+/* Resource List */
+.group-scheduler-resourcelist {
+  width: 350px;
+  /* Resource List Scroller */
+  .scroll-container-resourcelist {
+    width: 320px;
+
+    .viewport {
+      width: 300px;
+      height: 375px;
+    }
+
+    .overview {
+      width: 100%;
+    }
+
+    .scrollbar {
+      position: relative;
+      float: right;
+      width: 15px;
+      height: 120px;
+    }
+
+    .track {
+      width: 1px;
+      height: 100%;
+      border-radius: 4px;
+    }
+
+    .thumb {
+      top: 0;
+      width: 13px;
+      height: 20px;
+      margin-left: -6px;
+    }
+  }
+}
+
+
+
+
 /*
 -=-=- Dragula Classes
 */
@@ -102,7 +142,6 @@ elements with nested rules, like .list .item { padding: 10px; }.*/
   margin: 0 !important;
   font-family: Arial, Helvetica, sans-serif;
   cursor: move;
-
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
   filter: alpha(opacity=80);
   opacity: .8;
@@ -126,7 +165,6 @@ elements with nested rules, like .list .item { padding: 10px; }.*/
   box-sizing: border-box;
   display: block;
   float: none !important; /* added to override the float from the resource */
-
   width: 100% !important;
   height: 100%;
   // margin: 0 !important;
