- GroupScheduler is partially functional - started on Auto-Schedule, is partially functional

--- a/RockWeb/Themes/Rock/Styles/group-scheduler.less
+++ b/RockWeb/Themes/Rock/Styles/group-scheduler.less
@@ -85,12 +85,11 @@
 }
 
 .resource[data-state="unassigned"] {
-  .resource-visible-assigned {
-    display: none;
-  }
 }
 
 .resource[data-state="unassigned"][data-is-scheduled="true"] {
+  // ?? needed?
+  //display:none;
   background-color: red;
 }
 
