--- a/RockWeb/Themes/Rock/Styles/group-scheduler.less
+++ b/RockWeb/Themes/Rock/Styles/group-scheduler.less
@@ -40,8 +40,9 @@
   font-family: @font-family-sans-serif;
   color: @btn-default-color;
   //overflow: auto;
-  cursor: pointer;
   cursor: move;
+  cursor: -webkit-grab;
+  cursor: grab;
   background-color: @btn-default-bg;
   border: 1px solid @btn-default-border;
   border-radius: 4px;
@@ -70,6 +71,10 @@
   .resource-name {
     display: block;
     margin-right: 20px;
+  }
+
+  .dropdown-menu {
+    font-size: @font-size-small;
   }
 }
 
@@ -126,6 +131,14 @@
 
   .panel-title {
     line-height: 24px;
+  }
+}
+
+.location .panel-body {
+  padding: 0;
+  > .dropzone {
+    padding: @panel-body-padding;
+    min-height: 82px;
   }
 }
 
@@ -306,7 +319,9 @@ elements with nested rules, like .list .item { padding: 10px; }.*/
   max-width: 560px;
   margin: 0 !important;
   font-family: Arial, Helvetica, sans-serif;
-  cursor: move;
+  cursor: move !important;
+  cursor: -webkit-grabbing !important;
+  cursor: grabbing !important;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
   filter: alpha(opacity=80);
   opacity: .8;
@@ -328,10 +343,10 @@ elements with nested rules, like .list .item { padding: 10px; }.*/
 /* Is added to the source element when its mirror image is dragged. It just adds opacity to it.*/
 .gu-transit {
   box-sizing: border-box;
-  display: block;
+  //display: block;
   float: none !important; /* added to override the float from the resource */
-  width: 100% !important;
-  height: 100%;
+  // width: 100% !important;
+  //height: 100%;
   // margin: 0 !important;
   // background: repeating-linear-gradient(
   //   -55deg,
