--- a/RockWeb/Themes/Rock/Styles/group-scheduler.less
+++ b/RockWeb/Themes/Rock/Styles/group-scheduler.less
@@ -190,6 +190,10 @@
   border: 1px solid #d8d8d8;
   border-radius: 50%;
 
+  &[data-status="pending"] {
+    background-color: #009cdf;
+  }
+
   &[data-status="confirmed"] {
     background-color: #25c58e;
   }
