(Group Scheduler) - Fixed person staying assigned in old location if dragged from one location to another - Updated ProgressBar to make a little more sense in cases where there were more assigned than desired. Added a 'desired-indicator' that'll show up in that case.

--- a/RockWeb/Themes/Rock/Styles/group-scheduler.less
+++ b/RockWeb/Themes/Rock/Styles/group-scheduler.less
@@ -294,7 +294,6 @@
   // width: 135px;
   // height: 24px;
   // display: inline-block;
-
   .progress {
     margin-bottom: 0;
   }
@@ -320,6 +319,14 @@
       width: 1px;
       height: 100%;
       background-color: #fff;
+    }
+
+    .desired-indicator {
+      position: relative;
+      top: -24px;
+      width: 1px;
+      height: 100%;
+      background-color: darkgreen;
     }
   }
 
